# Piccolo

./: .gitignore  CMakeLists.txt  build_macos.sh  imgui.ini  initialize.json
engine/: CMakeLists.txt
engine/asset/global/: rendering.global.json
engine/asset/level/: 1-2.level.json
engine/asset/objects/basic/teapot/: teapot.object.json
engine/asset/objects/basic/teapot/material/: teapot.material.json
engine/asset/objects/character/player/: player.object.json
engine/asset/objects/environment/basic/: bunny.object.json  capsule.object.json  convexmesh.object.json  cube.object.json  sphere.object.json
engine/asset/objects/environment/flock/: flock.object.json
engine/asset/world/: hello.world.json
engine/shader/: CMakeLists.txt
engine/source/editor/: CMakeLists.txt
engine/source/editor/include/: editor_input_manager.h  editor_scene_manager.h
engine/source/editor/source/: editor.cpp  editor_input_manager.cpp  editor_scene_manager.cpp  editor_ui.cpp  main.cpp
engine/source/meta_parser/: CMakeLists.txt
engine/source/runtime/: CMakeLists.txt  engine.cpp
engine/source/runtime/core/base/: macro.h
engine/source/runtime/core/log/: log_system.h
engine/source/runtime/core/math/: Readme.md  axis_aligned.cpp  axis_aligned.h  line_intersect.cpp  line_intersect.h  math.cpp  math.h  math_defines.h  math_headers.h  matrix2.cpp  matrix2.h  matrix3.cpp  matrix3.h  matrix4.cpp  matrix4.h  matrixN.cpp  matrixN.h  parameter.h  quaternion.cpp  quaternion.h  transform.cpp  transform.h  vector2.cpp  vector2.h  vector3.h  vector4.h  vector_util.cpp  vector_util.h
engine/source/runtime/core/profile/: instrumentor.cpp  instrumentor.h  profile.cpp  profile.h
engine/source/runtime/function/animation/: animation_FSM.cpp  animation_FSM.h  animation_loader.h  animation_manager.cpp  animation_manager.h  animation_system.cpp  node.cpp  pose.cpp  pose.h  skeleton.cpp  utilities.cpp  utilities.h
engine/source/runtime/function/animation/FK/: FK.cpp
engine/source/runtime/function/animation/IK/: IK.cpp
engine/source/runtime/function/audio/: audio_FSM.cpp  audio_FSM.h  audio_resource_manager.cpp  audio_resource_manager.h  audio_system.cpp  audio_system.h
engine/source/runtime/function/controller/: character_controller.cpp  character_controller.h
engine/source/runtime/function/framework/component/: component.h
engine/source/runtime/function/framework/ecs/: component_array.cpp  component_array.h  component_manager.h  coordinator.cpp  coordinator.h  entity_manager.h  event.h  event_manager.h  system.h  system_manager.h  types.h
engine/source/runtime/function/framework/event/: event.h  event_manager.h
engine/source/runtime/function/framework/level/: level.cpp  level_debugger.cpp
engine/source/runtime/function/framework/object/: object.cpp
engine/source/runtime/function/framework/world/: world_manager.cpp  world_manager.h
engine/source/runtime/function/global/: global_context.cpp  global_context.h
engine/source/runtime/function/particle/: particle_system.cpp  particle_system.h
engine/source/runtime/function/physics/: physics_manager.cpp  physics_memory_hook.cpp  physics_scene.h  physics_system.cpp
engine/source/runtime/function/physics/jolt/: utils.cpp
engine/source/runtime/function/render/: render_camera.cpp  render_camera.h  render_debug_config.h  render_pass.h  render_pass_base.cpp  render_pass_base.h  render_pipeline.cpp  render_pipeline.h  render_pipeline_base.cpp  render_pipeline_base.h  render_resource.cpp  render_resource_base.cpp  render_scene.cpp  render_system.cpp  render_system.h
engine/source/runtime/function/render/debugdraw/: debug_draw_primitive.h
engine/source/runtime/function/render/passes/: canvas_pass.cpp  canvas_pass.h  combine_ui_pass.cpp  fxaa_pass.cpp  main_camera_pass.cpp  main_camera_pass.h  particle_pass.cpp  pick_pass.cpp  ui_pass.cpp
engine/source/runtime/function/script/: script_system.cpp  script_system.h
engine/source/runtime/resource/asset_manager/: asset_manager.cpp
engine/source/runtime/resource/res_type/components/: animation.h  (+4 more)
scripts/: split_skybox.py
(+25 files in other folders)
